--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/gh/monzanifabio/cryptofont/cryptofont.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
     <link href="src/css/style.css" rel="stylesheet" type="text/css">
+    <a href="google.ca">
     <link rel="icon" type="image/svg+xml" href="src/img/icons8-dragon-96.png">
+      </a>
     <title>LaunchPad</title>
   </head>
   <body>
